--- a/王浩然/学习笔记/将数字转为字符串.md
+++ b/王浩然/学习笔记/将数字转为字符串.md
@@ -1,9 +1,114 @@
 利用这个方法，可以简化很多的数字处理问题
-下面介绍它的基本知识点
+下面介绍它的基本知识点以及它们的命名由来
+## 数字与字符串的转化函数：
 
+1. `sprintf()`：将格式化的数据写入字符串中。它的原型为 `int sprintf(char *str, const char *format, ...)`，其中 `str` 是目标字符串的指针，`format` 是格式化字符串，后面的参数是要写入的数据。
 
+```c
+char str[50];
+//当你声明一个字符数组并初始化它时，例如`char arr;`
+//这将在数组预留20个字符的空间。然而，这并不意味着数组的实际长度就是20。
+//实际长度取决于你实际存储在数组中的字符数量。
+int num = 123;
+sprintf(str, "%d", num);
+```
 
+1. `atoi()`：将字符串转化为整数。它的原型为 `int atoi(const char *str)`，其中 `str` 是要转化的字符串。其中函数名`atoi` 是 "ASCII to integer" 的缩写
 
+```c
+char str[] = "123";
+int num = atoi(str);
+```
 
+1. `atof()`：将字符串转化为浮点数。它的原型为 `double atof(const char *str)`，其中 `str` 是要转化的字符串。
 
-另附string.h的使用说明，真的是个宝藏诶😊
+```c
+char str[] = "123.45";
+double num = atof(str);
+```
+
+4. `strtol()`：将字符串转化为长整数。它的原型为 `long int strtol(const char *str, char **endptr, int base)`，其中 `str` 是要转化的字符串，`endptr` 是转化后的剩余部分，`base` 是转化的基数。
+
+```c
+char str[] = "1234567890";
+char *endptr;
+long num = strtol(str, &endptr, 10);
+```
+
+5. `strtod()`：将字符串转化为双精度浮点数。它的原型为 `double strtod(const char *str, char **endptr)`，其中 `str` 是要转化的字符串，`endptr` 是转化后的剩余部分。
+
+```c
+char str[] = "123.456";
+char *endptr;
+double num = strtod(str, &endptr);
+```
+
+6. `snprintf()`：将格式化的数据写入字符串中。它类似于 `sprintf()` 函数，但是可以限制写入的字符数，避免缓冲区溢出。它的原型为 `int snprintf(char *str, size_t size, const char *format, ...)`，其中 `str` 是目标字符串的指针，`size` 是目标字符串的最大长度，`format` 是格式化字符串，后面的参数是要写入的数据。`snprintf` 函数名中的 "sn" 表示 "safe and n"，而 "printf" 则表示 "print formatted"。因此，`snprintf` 可以理解为 "safe and formatted print" 的缩写。
+
+```c
+int num = 42;
+char str[20];
+snprintf(str, sizeof(str), "%d", num);
+```
+## 数字与字符的转化操作
+
+1. 字符转为数字：使用字符减'0'即可
+
+```c
+char n=5;
+//转为数字
+int int_n='n'-'0';
+//计算'5' - '0'就相当于计算53 - 48，结果是5
+```
+## 其它
+>另附string.h的使用说明 : `string.h` 是C语言中的一个标准头文件，提供了一系列字符串操作相关的函数和宏的声明。它是C标准库的一部分，包含了对字符串的处理函数、字符操作函数以及内存操作函数等。
+
+- 字符串操作函数：
+  - `strlen()`：计算字符串的长度。
+  - `strcpy()`：将一个字符串复制到另一个字符串。
+  - `strcat()`：将一个字符串连接到另一个字符串的末尾。
+  - `strcmp()`：比较两个字符串。
+  - `strncmp()`：比较两个字符串的前 n 个字符。
+  - `strstr()`：在一个字符串中搜索指定子字符串的位置。
+  - `strchr()`：在一个字符串中搜索指定字符的位置。
+  - `strtok()`：将一个字符串分割成多个子字符串。
+
+- 字符操作函数：
+  - `isalpha()`：检查字符是否为字母。
+  - `isdigit()`：检查字符是否为数字。
+  - `isalnum()`：检查字符是否为字母或数字。
+  - `isspace()`：检查字符是否为空白字符。
+  - `toupper()`：将字符转换为大写。
+  - `tolower()`：将字符转换为小写。
+
+- 内存操作函数：
+  - `memcpy()`：将内存块的内容复制到另一个内存块。
+  - `memmove()`：将内存块的内容移动到另一个内存块，可以处理重叠的情况。
+  - `memset()`：将内存块的内容设置为指定的值。
+  - `memcmp()`：比较两个内存块的内容。
+
+`<stdlib.h>` 是C语言标准库中的一个头文件，它包含了许多常用的函数和宏，用于执行各种任务，如内存分配、随机数生成、字符串转换和其他常见的实用程序。以下是一些常见的函数和宏：
+
+1. 内存分配和释放：
+   - `malloc`：分配指定字节数的内存空间。
+   - `calloc`：分配指定数量的元素，每个元素的大小为特定字节数。
+   - `realloc`：更改之前分配的内存块的大小。
+   - `free`：释放之前分配的内存空间。
+
+2. 伪随机数生成：
+   - `rand`：生成一个伪随机整数。
+   - `srand`：设置随机数发生器的种子值。
+
+3. 字符串转换：
+   - `atoi`：将字符串转换为整数。
+   - `atof`：将字符串转换为浮点数。
+   - `itoa`：将整数转换为字符串。
+
+4. 环境控制：
+   - `system`：调用系统命令。
+
+5. 其他实用程序：
+   - `exit`：终止程序执行。
+   - `qsort`：对数组进行快速排序。
+
+这些函数和宏提供了许多常见任务的便捷方法，并且是C语言程序中经常使用的一部分。
