--- a/ 杂/b站转写/安陵容.md
+++ b/ 杂/b站转写/安陵容.md
@@ -1,20 +1,36 @@
 不装了,本宫是个拉儿,因为我这一生本就是不直的.那天姗姗来迟的,我还是赶上了一段早早注定的缘.不是他[皇帝],是她.嬛嬛一袅楚宫腰,嬛嬛是她,而我是鸟,紫禁城的一切都是新的,唯有世界对我的霸凌一成不变,当我被夏氏当众羞辱之时,我多希望有个人能站出来英雌救美.她来了.这是上帝第一次听见了我的求救,如果上帝总是长着耳朵,将天下无陵,赠人玫瑰,手有余香.簪花留情并编海棠,我还能再见到她吗?只要我够主动,因为——越主动越幸运.
-我寻到了甄府,宾至如归,开始不知年岁,她叫我姐姐,我也叫她姐姐,我们似乎都不愿意称小做妹妹.好不幸,她17,我16,她被封了常在,我被封了答应我似乎什么都不如她一点点,但我不是沈眉庄,若是真喜欢,不会计较这一点点,我是个小女子,若压我上头的是个宝,心便能安好,心若安好,生亦得容所.甄嬛你好,我是安陵容,很高兴认识你,我想和你做个朋友,我与婉姐姐都是被选召的孩子,但我们的征途不是星辰和大海,而是龙床与皇位.
-入宫后婉姐姐病了,而我也未被选召,这似乎是我们不约而同的默契,我们都不想睡皇帝,或者她和我一样,也觉得龙床脏,我们依旧是一双完璧人,我表面装不快活,怕旁人看穿了我的心思,其实我巴不得皇上干脆忘了我,不料皇后仍念着我,敬事房传来的旨意就像一张病危通知书,吓得我六神无主,姐姐,终究是我先对不住你了,可我没有选择,害怕如我一直发抖在被抬走,我在想我害怕的究竟是她还是她们,这夜后宫里人都笑话我被完璧归赵错了,归的是真,我不辱使命,可我回来了,赵王却走了,这城市那么空,我能和谁相拥?
+
+我寻到了甄府,宾至如归,开始不知年岁,她叫我姐姐,我也叫她姐姐,我们似乎都不愿意称小做妹妹.好不幸,她17,我16,她被封了常在,我被封了答应。我似乎什么都不如她一点点,但我不是沈眉庄,若是真喜欢,不会计较这一点点,我是个小女子,若压我上头的是个宝,心便能安好,心若安好,生亦得容所.甄嬛你好,我是安陵容,很高兴认识你,我想和你做个朋友。我与婉姐姐都是被选召的孩子,但我们的征途不是星辰和大海,而是龙床与皇位.
+
+入宫后婉姐姐病了,而我也未被选召,这似乎是我们不约而同的默契,我们都不想睡皇帝,或者她和我一样,也觉得龙床脏,我们依旧是一双完璧人,我表面装不快活,怕旁人看穿了我的心思,其实我巴不得皇上干脆忘了我,却不料皇后仍念着我,敬事房传来的旨意就像一张病危通知书,吓得我六神无主,姐姐,终究是我先对不住你了,可我没有选择,害怕如我一直发抖在被抬走,我在想我害怕的究竟是她还是她们,这夜后宫里人都笑话我被完璧归赵错了,归的是真,我不辱使命,可我回来了,赵王却走了,这城市那么空,我能和谁相拥?
+
 是王移情别恋还是璧自作多情,可当我看到她的赏赐,心中巨动,甄嬛是凤凰,非我池中之物,她要的这些我根本给不了,她要飞我便追,能不落下就是成全火星,要撞地球,有月球护着,我想与姐姐亲近,也隔着一个沈眉庄,三角形是最稳定的结构,但三角关系并不是人再努力也无法赢过时间.
+
 甄嬛与沈眉庄自幼借号,我比不上,她们约会总不记得叫我,有些事情大白才肯相告,尽管交好背后也偶有刻薄,我本以为我们会是个等边三角形,三足鼎立,实际上却是等腰三角形,我还是那条底边,而且比它们短,s等于1/2h底边越长,面积越大,所以我努力让自己变长,扩容我们友情的面积,姐妹落难我殷勤的情,姐妹为难我冷宫孤行,姐妹作难,我同流谋营可.后来才发现在友情的领地上只容两人行,我永远是落单的,就像她抚琴她做舞,多余的是我的歌声,我甚至还不如一个吹笛的三人行必有我师,或许只有没了沈眉庄姐姐的眼里才会有我,老天有耳又听见了我的祈祷,沈眉庄被隔离,我得的机会果然少了一个人呼吸,连空气都是恬静静的,她替我打扮领我歌喉,更意外的是她愿意把她的男人分享给我,分享欲是最简单又最高级的浪漫,我本无异于皇帝,但姐姐希望我做什么我便去做,哪怕要装投,我以南报之以景,礼尚往来请勿断绝,但分享是两个人的事,超过两个人便是廉价的共享.
+
 当看到浣碧穿着我送给姐姐的浮光景时,我特别不高兴,难道分享对甄嬛来说不是偏爱,而是博爱,但对于缺爱的我来说,有爱就行,何必计较爱的属性.姐姐和我一起吃百合香,她好会姐姐也陪我受了华妃的折辱,她好感其实我根本不气华妃拿我和姐姐当月季,而是她说我没唱出情好之意,能激怒歌手的是没有礼貌的乐评,姐姐就在我旁边,我怎么可能唱不好发色,拉华妃你就是个屁,现在我知道姐姐写丢了草头去,哪连草头也飞走了,还在我嘴边,我染了风寒就有人趁虚而入,占了姐姐走了个沈眉庄,又来了个方淳意,我们的地盘又拥挤了起来,她比我还主动,不仅在各种场合声明姐姐主权,还求到了碎玉轩的房屋使用权姐姐喜欢她的天真,我就装作喜欢她装的天真,反正这比装作喜欢一个男人要轻松多了,而且她再努力也改变不了我先认识姐姐的事实,如果我赢不了沈眉庄,她也赢不过我又错了,时间只能度量感情的长短,却度量不了感情的深浅,她挂机方淳意总比挂机我深一点点,瞧我也开始计较这一点点了,其实人人都是沈眉庄,爱是有保质期的,姐姐对我的爱变质了,比如她不再愿意与我分享皇帝,我根本不在乎皇帝,我在乎为什么她以前能做到,现在就做不到了,答案很简单,她变了,她不爱我了.
 我知道我与姐姐有隔阂,有皇后离间其中,皇后对我的喜欢和用心直接又狡猾.我虽然不喜欢她这样,但我却喜欢她为了得到我而倾尽心机,费尽手段,这让我知道我值得被好好的爱和争取.
 人生难题之一.选我爱的人还是爱我的人,我好犹豫.
-直到那天我无意间发现了甄嬛装台屉子里的手信是沈眉庄的字,珍重自身,扶持玲珑,原来这些年的情爱时光竟是一个功利的选择,甄嬛不是真心的,如果都是要被利用,我为何不选一个爱我的人呢?况且皇后也很美,我要送皇后一份嫁妆,打掉富察贵人的孩子,孩子不打不听话,要打就从娘胎里打起.smelly cat.What are they feeding you? Silly bird.It's not your fault.自那以后,我与皇后成了宫里的绝代双骄,一个很反派的抬头,与其做一只温驯的学舌,鹦鹉不如成一只伪善的顽劣无缺.
-甄嬛也有了皇帝的孩子风光无限,如果爱一个人不能在她心中留下位置,那就伤害一个人在她心中留下伤痕,这样她才会记住你舒痕胶能让她的皮展开,由外而内的充分吸收其中的麝香,继而神鬼不觉的流产.我知道这出戏的结局,所以愈发觉得姐姐在牡丹台的笑迷人又销魂,在翊坤宫的痛刻骨又催生烟花易冷,黄似一妖.
-三月黄黄一夕消,其我爱者该死,如我乐者当杀,报应不爽,大快人心.大家都不喜欢b1,但只要我更坏,再坏的b1也是happy ending.和皇后在一起时,我发现她也好爱皇帝,我不理解皇帝只是好用,有什么好爱的,而我那么值得被爱,却只能反复为皇后所用也罢,我和皇后的关系无非一纸契约,她与我机会我便好好发挥,起码我们的目标一致.
+
+直到那天我无意间发现了甄嬛装台屉子里的手信是沈眉庄的字,珍重自身,扶持玲珑,原来这些年的情爱时光竟是一个功利的选择,甄嬛不是真心的,如果都是要被利用,我为何不选一个爱我的人呢?况且皇后也很美,我要送皇后一份嫁妆,打掉富察贵人的孩子。孩子不打不听话,要打就从娘胎里打起.smelly cat.What are they feeding you? Silly bird.It's not your fault.自那以后,我与皇后成了宫里的绝代双骄,一个很反派的抬头,与其做一只温驯的学舌鹦鹉，不如成一只伪善的顽劣无缺.
+
+甄嬛也有了皇帝的孩子,风光无限.如果爱一个人不能在她心中留下位置,那就伤害一个人,在她心中留下伤痕,这样她才会记住你.舒痕胶能让她的皮展开,由外而内的充分吸收其中的麝香,继而神鬼不觉的流产.我知道这出戏的结局,所以愈发觉得姐姐在牡丹台的笑迷人又销魂,在翊坤宫的痛刻骨又催生烟花易冷,黄似一妖.
+
+三月黄黄一夕消,其我爱者该死,如我乐者当杀,报应不爽,大快人心.大家都不喜欢b1,但只要我,我和皇后的关系无非一纸契约,她与我机会我便好好发更坏,再坏的b1也是happy ending.和皇后在一起时,我发现她也好爱皇帝,我不理解皇帝只是好用,有什么好爱的,而我那么值得被爱,却只能反复为皇后所用也罢挥,起码我们的目标一致.
+
 皇帝皇后希望用我垄断皇帝的恩宠,而我希望用皇帝的恩宠刺激甄嬛,让她看见我比她过得更好,我宠冠后宫,不知她是否舒坦,我与皇后亲近,她又是否会簇堵,我替她解围,她心里该是何滋味.她问我为何不再对她坦诚,所以她还是关心我的吗?布林荣关心你就会来问你,喜欢你就一定会主动,为什么每每都要我主动向她坦诚,越主动不一定越幸运,但一定会越累.一条背影,两个痴人,四道目光,其实我和皇帝也是同道中人一样的目不转睛,也是一样的,不愿主动.
+
 皇帝说姐姐倔强,若有我一半柔顺便好,我也想若我有姐姐对你一半的爱也知足了.
+
 那段时间我是皇帝亦友亦敌,有在我们能一起说宛平的好与不好互作慰藉.敌在我得不到的皇帝也别想得到现在的平衡刚刚好,可这样的平衡很快就被甄嬛打破了,她主动了,但又不算完全主动,这动与不动之间就是皇帝的心动,这才是主动的学问,又回到了我最讨厌的三角形,甄嬛在我面前肆无忌惮的卖弄风骚,我完全受不了她赤裸裸的挑衅和勾引,我竟然有点喜欢三人行的感觉了,它究竟有多少样子是我不曾见过的?
 皇后见我无丝毫制衡,宛平之力便要我与她重修旧好,谢谢你宜修给了我一个不得不主动的借口,不暗示自己只是在工作,绝非我的本性.这样想,无论我碰了她多少次冷屁股,我的脸依然可以热辣滚烫,想要重构一段关系,不要先破坏一段关系.已知s和z是好姐妹,n是她们共同的敌人,问若z帮助了恩,s是否还会和z做好姐妹友情的袋鼠题难不倒我?
+
 甄嬛和沈眉庄冷战了,现下只要一门心思对姐姐好就行,她睡得真香,我多想一直这么睡着,她看觉说反了,我以血入药,想博她感动,但她依旧身份有计,我便替她试药.对,用了她的勺子,我得她主动的要领,欲擒故纵,便不经意露出了伤口,又刻意遮瞒引她追问一番努力,我们的关系破冰了,我要向全世界宣告我们复合了,我很尊重她,终于轮到我作妖,沈眉庄坐地边了,事实中最难料的是军心,上一秒今晚来事情,下一秒滚去蓬莱洲,姐姐要被送走了,可我公务缠身怎能脱身相陪?
-不想我的老板很好,竟外派我与姐姐同行,我当时问起皇后,若宛平一去不复返,臣妾岂不是要陪她永驻蓬莱洲,随时问句,时时叹句,原来出差也可以这样美妙,抽打工人,姐姐很是意外,问我是想去蓬莱州成仙吗?不然就是去做神仙眷侣的,若说凌云峰是甄嬛一生最好的时光,那蓬莱洲便是我的,她阅字我女工,她摊景我主食,没有皇帝,没有沈眉庄,只有我和姐姐,若不付出即与外人间隔,问津是何事乃不知有亲,小女惟愿,永无问津者.可桃花源只是一个梦.
-我窃听得知甄嬛依然心系皇帝,还用着沈眉庄的救济,她根本没变,朝三暮四,心猿意马,玲珑你真傻,世间的破镜重圆,不过是自欺欺人,感情是我人生的绊脚石,但换个角度看却是我事业的垫脚石.出差回来不久,我便升了管理层,更得老板和老板爹的喜爱.大厂工作不易,很快有新员工卷了进来,她抢我的老板,还抢我的女人,一副强盗嘴脸,幸好不怎么聪明,衬托我吧傻瓜.
+
+不想我的老板很好,竟外派我与姐姐同行,我当时问起皇后,若宛平一去不复返,臣妾岂不是要陪她永驻蓬莱洲,随时问句,时时叹句,原来出差也可以这样美妙,抽打工人,姐姐很是意外,问我是想去蓬莱州成仙吗?不然就是去做神仙眷侣的,若说凌云峰是甄嬛一生最好的时光,那蓬莱洲便是我的,她阅字我女工,她摊景我主食,没有皇帝,没有沈眉庄,只有我和姐姐,若不付出即与外人间隔,问今是何世，乃不知有津,小女惟愿,永无问津者.可桃花源只是一个梦.
+
+我窃听得知甄嬛依然心系皇帝,还用着沈眉庄的救济,她根本没变,朝三暮四,心猿意马,玲珑你真傻,世间的破镜重圆,不过是自欺欺人,感情是我人生的绊脚石,但换个角度看却是我事业的垫脚石.出差回来不久,我便升了管理层,更得老板和老板爹的喜爱.大厂工作不易,很快有新员工卷了进来,她抢我的老板,还抢我的女人,一副强盗嘴脸,幸好不怎么聪明,衬托我吧，傻瓜.
+
 一把大火烧了碎玉轩,甄媛便日日坐在沈眉庄处,没想祭祀,我便气沉丹田,想表一个noise,可她待我也不错,或许不霸占女主的感情,才是一个配角的安分守己,但不想当女主的女配不是好女配,皇后已经是皇后了,却还想扳倒女主,贪心不足,欲壑难填,皇帝的新衣揭穿了人的虚伪,纯元的旧衣揭穿了虚伪的人,因为婉玩完了,姐姐的草头又飞走了,富人爱者人恒富之,你本是个负心娘们,也不怪你遇到一个负心爷们,这世间的因果报应总是意料之外又情理之中.我猜姐姐现在能理解我了吧,因为只有刀扎到了自己人,才会真正的感同身受.世间没有女子能忍受自己心爱的女子和别的男子恩爱生子.甄嬛又一次怀上了皇帝的孩子,她恨透了皇帝,若这个孩子出生也只会长着一张惹人伤心的罪恶面孔,所以让我来帮她打掉这个孩子,以绝后患我决定毁掉甄嬛的父亲,让她悲痛欲绝,难产狮子,可惜这个孩子杀气太重,一打就出来了,对不起,姐姐没能帮到你,自姐姐怀孕被禁足起,我已经有212天没见过她了,我很想去偷偷看看她,但没机会了,她出宫走了,我再也见不到她了.
+
 甄嬛传里没有甄嬛了,而我一下子失去了两个人,一个是我爱的姐姐,一个是我恨的甄嬛,一处是我的软肋,一处是我的防备,比起说再见,我更喜欢用道别.或许我和甄嬛早就不在一条道上了,那就一道别过各自放过,错过也不忘爱国,不见是追袭初见,我们的开始是我迟到了,我们的结束是她早退了,为什么那么多的碰巧便是不巧...
