--- a/王浩然/学习笔记/将数字转为字符串.md
+++ b/王浩然/学习笔记/将数字转为字符串.md
@@ -62,16 +62,15 @@ int int_n='n'-'0';
 ```
 ## 其它
 
-  ### 字符串操作函数`<string.h>`:
+  ### 字符串与内存操作函数`<string.h>`:
   - `strlen()`:计算字符串的长度.
   - `strcpy()`:将一个字符串复制到另一个字符串.
   - `strcat()`:将一个字符串连接到另一个字符串的末尾.
   - `strcmp()`:比较两个字符串.
   - `strncmp()`:比较两个字符串的前 n 个字符.
   - `strstr()`:在一个字符串中搜索指定子字符串的位置.
-  - `strchr()`:在一个字符串中搜索指定字符的位置.
+  - `strchr()`:在一个字符串中搜索指定字符的位置.函数名`strchr`  是字符串（string）和字符（character）组合而成的。
   - `strtok()`:将一个字符串分割成多个子字符串.
-   内存操作函数:
   - `memcpy()`:将内存块的内容复制到另一个内存块.
   - `memmove()`:将内存块的内容移动到另一个内存块,可以处理重叠的情况.
   - `memset()`:将内存块的内容设置为指定的值.
@@ -88,8 +87,6 @@ int int_n='n'-'0';
   - `toupper(int c)`: 将字符转换为大写字母（如果它是小写字母）。
 
       > 这些函数的参数是一个 `int` 类型的字符或字符的 ASCII 值。如果字符满足函数的条件，函数将返回一个非零值（通常是1），否则返回0。
-
-
 
 
 
